@@ -121,16 +121,14 @@ tooltip.boreholeDrill=borehole drill
 tooltip.gpsReceiver=GPS receiver
 tooltip.trashCan=trash can, drop tools here to remove them
 
-units.ablation=m/year
-units.accumulation=m/year
-units.distance=m
-units.elevation=m
-units.equilibriumLineAltitude=m
-units.glacialBudget=m/year
-units.iceThickness=m
 units.celsius=\u2103
 units.fahrenheit=\u2109
-units.time=years
+units.feet=ft
+units.feet.symbol='
+units.feetPerYear=ft/year
+units.meters=m
+units.metersPerYear=m/year
+units.years=years
 
 #===============================================================================
 # end of file
