@@ -12,9 +12,8 @@ comboBox.preset.modern=modern \u00E9ghajlat
 help.equilibriumButton=<html>A gleccsert azonnal<br>egyens\u00FAlyi helyzetbe teszi</html>
 slider.snowfall=<html>\u00C1tlag<br>h\u00F3es\u00E9s\:</html>
 title.equilibriumLineAltitudeVersusTime=Egyens\u00FAlyi magass\u00E1g vonal-id\u0151
-units.time=\u00E9vek
+units.years=\u00E9vek
 tooltip.glacialBudgetMeter=jegesed\u00E9s m\u00E9r\u0151
-units.ablation=m/\u00E9v
 title.glacialBudgetVersusElevation=Jegesed\u00E9s-emelked\u00E9s
 slider.clock.slow=lass\u00FA
 glaciers.name=Gleccserek
@@ -47,7 +46,7 @@ label.glacialBudget=jegesed\u00E9s
 comboBox.preset.historical=750 000 \u00E9v \u00E9ghajlat t\u00F6rt\u00E9net
 checkBox.equilibriumLine=Egyens\u00FAlyi vonal
 comboBox.preset.iceAge=J\u00E9gkorszak \u00E9ghajlat
-units.glacialBudget=m/\u00E9v
+units.metersPerYear=m/\u00E9v
 label.accumulation=felhalmoz\u00F3d\u00E1s
 comboBox.preset.future=El\u0151rejelz\u00E9s-2050 \u00E9ghajlat
 axis.temperature=leveg\u0151 h\u0151m\u00E9rs\u00E9klete
@@ -59,7 +58,7 @@ title.error=Hiba
 checkBox.glacierPicture=Gleccser k\u00E9p
 label.units=egys\u00E9gek\:
 glaciers.description=\u00C1ll\u00EDtsa be a havaz\u00E1st ill. a h\u0151m\u00E9rs\u00E9kletet a gleccser n\u00F6veked\u00E9s\u00E9hez \u00E9s cs\u00F6kken\u00E9s\u00E9hez. Haszn\u00E1ljon tudom\u00E1nyos m\u00E9r\u0151eszk\u00F6z\u00F6ket a s\u0171r\u0171s\u00E9g, sebess\u00E9g, jegesed\u00E9s meg\u00E1llap\u00EDt\u00E1s\u00E1hoz.
-units.accumulation=m/\u00E9v
+units.meters=m
 radioButton.metricUnits=m\u00E9ter
 slider.clock.fast=gyors
 axis.glacierLength=gleccser hossza (m)
